@@ -1,3 +1,0 @@
-shp2sqlserver.exe - command line shapefile loader for sql server 2008
-
-http://www.salmonsalvo.net/blog/?p=105
